# liquid_os

./: .directory  .gitignore  .travis.yml  Cargo.toml  Justfile  LICENSE  Makefile  README.md  Xargo.toml  boot.asm  build.rs  dependencies.txt  grub.cfg  long_mode_init.asm  x86_64-liquid_os.json  x86_64-weclaw_os.json
drivers/video/console/: Cargo.toml
drivers/video/console/src/: lib.rs
drivers/video/console/src/vga_console/: color.rs  mod.rs
drivers/video/console/vga_console/: Cargo.toml
drivers/video/console/vga_console/src/: color.rs  lib.rs
memory/: Cargo.toml
memory/src/: bitmap_frame_allocator.rs  lib.rs
memory/src/paging/: entry.rs  mod.rs  table.rs
memory/src/x86_64/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/: externs.rs  interrupts.rs  lib.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
src/arch/x86_64/boot/: boot.asm  grub.cfg  layout.ld  linker.ld
src/drivers/: io.rs  keyboard.rs  mod.rs  pic.rs  serial.rs
src/drivers/video/: mod.rs
src/drivers/video/console/: mod.rs
src/drivers/video/console/vga_console/: color.rs  mod.rs
src/interrupts/: gdt.rs  mod.rs
src/kernel/: console.rs  kprint.rs  memory.rs  mod.rs
src/memory/: bitmap_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: mod.rs  table.rs  temporary_page.rs
src/memory/x86_64/paging/: entry.rs  mapper.rs  mod.rs  table.rs
