[package]
name = "liquid_os"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]

[dependencies]
x86_64 = "0.1.2"
multiboot2 = "0.3.2"
spin = "0.4.4"
bitflags = "1.0.1"
bit_field = "0.9.0"
volatile = "0.2.3"
linked_list_allocator = "0.6.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"