[package]
name = "liquid_os"
version = "0.1.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]

[dependencies]
x86_64 = "0.2.11"
multiboot2 = "0.3.2"
spin = "0.4.4"
bitflags = "1.0.1"
bit_field = "0.9.0"
volatile = "0.2.3"
slab_allocator = "0.3.5"
uart_16550 = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"